--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,4 +1,4 @@
-SYSROOT = $(shell realpath ../sysroot)
+SYSROOT = $(abspath ../sysroot)
 
 C_FILES = $(shell find -name modules -prune -o -type f -name '*.c' -print)
 S_FILES = $(shell find -name modules -prune -o -type f -name '*.S' -print)
@@ -6,8 +6,8 @@ OBJECTS = $(C_FILES:.c=.o) $(S_FILES:.S=.o)
 
 -include ../config.mk
 
-CFLAGS += -I$(SYSROOT)/usr/include -I$(shell pwd)/include -ffreestanding -fbuiltin
-LDFLAGS += -nostdlib -L$(KERNEL_DIR)/ -lgcc
+CFLAGS += -I$(PWD)/include -ffreestanding -fbuiltin
+LDFLAGS += -nostdlib -lgcc -lk
 
 all: aeros-i686.kernel
 
@@ -18,7 +18,7 @@ kernel.o: CFLAGS += -DMULTIBOOT1
 
 boot.o: ASFLAGS += -DMULTIBOOT1
 
-aeros-i686.kernel: $(OBJECTS) linker.ld
+aeros-i686.kernel: $(OBJECTS) linker.ld $(SYSROOT)/usr/lib/libc.a
 	$(CC) -o $@ $(OBJECTS) $(LDFLAGS) -Wl,-d -T linker.ld -ffreestanding -fbuiltin
 
 install: all
