--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -7,7 +7,7 @@ OBJECTS = $(C_FILES:.c=.o) $(S_FILES:.S=.o)
 -include ../config.mk
 
 CFLAGS += -I$(PWD)/include -ffreestanding -fbuiltin
-LDFLAGS += -nostdlib -lgcc -lk
+LDFLAGS += -g -nostdlib -lgcc -lk
 
 all: aeros-i686.kernel
 
