Added aeros-ports submodule and some uninteresting stuff Added things to .gitignore Added target to boot qemu from hdd Added lib folders to uncrustify Added bochs target with symbols file generation Removed non ASCII chars from kb_layouts: "éèçàù" Added some POSIX functions to headers

--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,19 @@
 .gdbinit
 bochsrc.bxrc
 gkd*.xml
+.gourcerc
 
 #log files
 bochslog.txt
 doxylog
 netdump.pcap
 serial.txt
+*.log
 .*.swp
 core
 *.log
-jmpDB.mv.db
+*.db
+*.dot
 
 #intermediate files
 *.o
