--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib"]
 	path = lib
 	url = https://github.com/Aerath/aeros-libs.git
+[submodule "ports"]
+	path = ports
+	url = https://github.com/Aerath/aeros-ports.git
