Moved print functions from libk to libc Added lib folder to sed process in uncrustify rule Link libk before libgcc

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -7,7 +7,7 @@ OBJECTS = $(C_FILES:.c=.o) $(S_FILES:.S=.o)
 -include ../config.mk
 
 CFLAGS += -I$(PWD)/include -ffreestanding -fbuiltin
-LDFLAGS += -g -nostdlib -lgcc -lk
+LDFLAGS += -g -nostdlib -lk -lgcc
 
 all: aeros-i686.kernel
 
