--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,17 @@ script:
   - export CHANGED_FILES="$(git diff-tree --no-commit-id --name-only -r $LAST_BUILT_COMMIT_SHA HEAD)"
   - echo "[TRAVIS] Changed files since last build ($LAST_BUILT_COMMIT_SHA) :"
   - for f in $CHANGED_FILES; do echo [TRAVIS] $f; done
-  - export PATH="$PATH:$HOME/prefix/bin"
-  - if echo "$CHANGED_FILES" | grep -q "toolchain\|lib/c";
+  - export PATH="$PATH:$HOME/local/bin"
+  - if echo "$CHANGED_FILES" | grep -q ".travis.yml\|toolchain\|lib/c";
     then echo [TRAVIS] Testing binutils deb build... &&
+        echo [TRAVIS] Removing \$HOME/local ... &&
+        rm -rf $HOME/local/* &&
         make -C toolchain binutils-deb &&
         echo [TRAVIS] Binutils deb build OK. Cleaning... &&
         rm -rfv toolchain/build-binutils &&
         make -C toolchain binutils-unpatch &&
         echo [TRAVIS] Building and installing binutils in local prefix... &&
-        make -C toolchain binutils-install PREFIX="$HOME/prefix" &&
+        make -C toolchain binutils-install PREFIX="$HOME/local" &&
         echo [TRAVIS] Binutils build OK. &&
         echo [TRAVIS] Testing GCC deb build... &&
         make -C toolchain gcc-deb &&
@@ -42,6 +44,7 @@ after_failure:
 before_deploy:
   - export TRAVIS_BINUTILS_ARTIFACT=$(ls toolchain/dist/*binutils*.deb)
   - export TRAVIS_GCC_ARTIFACT=$(ls toolchain/dist/*gcc*.deb)
+  - wget https://api.travis-ci.org/jobs/$TRAVIS_JOB_ID/log.txt -O travis-job-$TRAVIS_JOB_ID.log
 
 deploy:
   provider: releases
@@ -50,8 +53,14 @@ deploy:
   file:
     - $TRAVIS_BINUTILS_ARTIFACT
     - $TRAVIS_GCC_ARTIFACT
+    - travis-job-$TRAVIS_JOB_ID.log
   skip_cleanup: true
   on:
     condition: $TRAVIS_DEPLOY = 1
     repo: Aerath/aeros
     branch: develop
+
+cache:
+  - apt
+  - directories:
+      - $HOME/local
